# text-classification-inference-app

./: .gitignore  00_data_augmentation.ipynb  01_nlp_model.ipynb  LICENSE.md  README.md  auth.sh
inference_application/: Dockerfile  Makefile  README.md  config.ini  entry_point.sh  pyproject.toml
inference_application/src/: globals.py  main.py  utils.py
inference_application/src/agents/: __init__.py  notes_agent.py
inference_application/src/controller/: __init__.py  domain_predictor.py  mistral_ocr.py
inference_application/src/controller/ml/: logistic_model.pkl  tfidf_vectorizer.pkl
inference_application/src/models/: __init__.py  base.py  notes.py
inference_application/src/routes/: classifier.py
test/: test_data.csv
train/: train_data.csv
train/notes/: 004.txt
